--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/knex": "^0.16.1",
+    "@types/mongoose": "^5.11.97",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.11.1",
